--- a/src/index.css
+++ b/src/index.css
@@ -20,20 +20,23 @@
   background-size: cover;
   background-position: center;
   position: relative;
+  z-index: 1;
+}
+
+/* Gradient fade-out effect at the bottom of the #hero section */
+#hero::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 150px;
+  /* Adjust the height of the fade-out effect */
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(12, 14, 22, 1) 100%);
+  z-index: 2;
 }
 
 #hero .centeredText {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  text-align: center;
-  z-index: 2;
-  padding: 0 20px;
-}
-
-#hero .centeredText2 {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -143,32 +146,6 @@
   z-index: 1;
 }
 
-@keyframes flicker {
-  0% {
-    transform: rotate(-1deg);
-  }
-
-  20% {
-    transform: rotate(1deg);
-  }
-
-  40% {
-    transform: rotate(-1deg);
-  }
-
-  60% {
-    transform: rotate(1deg) scale(1.1);
-  }
-
-  80% {
-    transform: rotate(-2deg) scale(1);
-  }
-
-  100% {
-    transform: rotate(1deg);
-  }
-}
-
 svg {
   position: absolute;
   top: 13%;
@@ -204,7 +181,6 @@ svg path {
   width: 100%;
   pointer-events: none;
   z-index: 0;
-  z-index: 100;
 }
 
 .reserve-btn-container {
@@ -216,17 +192,6 @@ svg path {
 }
 
 .reserve-btn {
-  padding: 10px 24px;
-  background-color: #fff;
-  color: #333;
-  border: none;
-  border-radius: 30px;
-  font-size: 0.85rem;
-  cursor: pointer;
-  transition: background-color 0.3s ease, color 0.3s ease;
-}
-
-.reserve-btn button {
   padding: 10px 24px;
   background-color: #fff;
   color: #333;
