--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,14 +1,43 @@
-#hero {
+body {
   font-family: "Poppins", sans-serif;
+  font-display: swap;
+}
+
+::-moz-selection {
+  background-color: rgb(0, 112, 204);
+  color: #fff;
+}
+
+::selection {
+  background-color: rgb(0, 112, 204);
+  color: #fff;
+}
+
+::-webkit-scrollbar {
+  width: 3px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #1593c9;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+#hero {
   font-size: 1rem;
   color: #fff;
   height: 100vh;
   width: 100%;
   background: url("../assets/hero_section_background.jpg");
   background-size: cover;
-  background-position: center;
+  background-position: 25%;
   position: relative;
-  z-index: 1;
 }
 #hero::after {
   content: "";
@@ -18,7 +47,6 @@
   width: 100%;
   height: 150px;
   background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgb(12, 14, 22) 100%);
-  z-index: 2;
 }
 #hero .centeredText {
   display: flex;
@@ -27,7 +55,6 @@
   align-items: center;
   height: 100vh;
   text-align: center;
-  z-index: 2;
   padding: 0 20px;
 }
 #hero .centeredText p {
@@ -41,6 +68,7 @@
 #hero .stretched {
   width: 40%;
   color: #d3d3d3 !important;
+  z-index: 10;
 }
 #hero header {
   display: flex;
@@ -54,18 +82,17 @@
 }
 #hero header .logo {
   font-size: 1rem;
-  color: #fff;
 }
 #hero header ul {
   display: flex;
   text-transform: uppercase;
   list-style: none;
+  letter-spacing: 1px;
 }
 #hero header ul li {
   margin-left: 1.5rem;
 }
 #hero header ul a {
-  color: #fff;
   text-decoration: none;
   font-size: 1rem;
   transition: color 0.3s;
@@ -92,7 +119,6 @@
   transform: rotate(-90deg);
   transform-origin: left bottom;
   text-transform: uppercase;
-  z-index: 2;
 }
 .left-text::before {
   content: "";
@@ -107,23 +133,44 @@
 
 .smoke-container {
   position: absolute;
-  height: 450px;
+  height: 380px;
   width: 200px;
-  bottom: 130px;
-  left: 23%;
+  top: 58%;
+  left: 30%;
+  transform: translate(-50%, -50%);
   -webkit-mask-image: linear-gradient(to top, rgb(0, 0, 0) 30%, rgba(0, 0, 0, 0));
   -webkit-mask-size: 100% 100%;
   -webkit-mask-repeat: no-repeat;
   -webkit-mask-position: center bottom;
-  z-index: 1;
 }
 
+@media (min-width: 1920px) {
+  .smoke-container {
+    height: 700px;
+    width: 250px;
+    top: 72%;
+    left: 32%;
+  }
+}
+@media (max-width: 1300px) {
+  .smoke-container {
+    height: 700px;
+    width: 250px;
+    top: 70%;
+    left: 35%;
+  }
+  .stretched {
+    width: 70% !important;
+  }
+  .left-text {
+    margin-left: 2.5rem;
+  }
+}
 svg {
   position: absolute;
   top: 13%;
   height: 300px;
   width: 200px;
-  z-index: 1;
 }
 svg path {
   fill: none;
@@ -149,12 +196,12 @@ svg path {
   left: 0;
   width: 100%;
   pointer-events: none;
-  z-index: 2;
+  z-index: 1;
 }
 
 .reserve-btn-container {
   position: absolute;
-  bottom: 2rem;
+  bottom: 4rem;
   left: 50%;
   transform: translateX(-50%);
   z-index: 3;
