--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,16 +1,40 @@
 @import './variables.scss';
 
-#hero {
+body {
     font-family: $font-family;
+    font-display: swap;
+}
+
+::selection {
+    background-color: $blue-hover;
+    color: $white;
+}
+
+::-webkit-scrollbar {
+    width: 3px;
+}
+
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+    background: $primary-color;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
+
+#hero {
     font-size: 1rem;
-    color: $primary-color;
+    color: $white;
     height: 100vh;
     width: 100%;
     background: $background-image;
     background-size: cover;
-    background-position: center;
+    background-position: 25%;
     position: relative;
-    z-index: 1;
 
     &::after {
         content: '';
@@ -20,7 +44,6 @@
         width: 100%;
         height: 150px;
         background: $gradient;
-        z-index: 2;
     }
 
     .centeredText {
@@ -30,13 +53,12 @@
         align-items: center;
         height: 100vh;
         text-align: center;
-        z-index: 2;
         padding: 0 20px;
 
         p {
             font-size: 1rem;
             margin: 0.5rem 0;
-            color: $primary-color;
+            color: $white;
 
             &:nth-of-type(2) {
                 font-size: 1.8rem;
@@ -47,6 +69,7 @@
     .stretched {
         width: 40%;
         color: $secondary-color !important;
+        z-index: 10;
     }
 
     header {
@@ -61,20 +84,19 @@
 
         .logo {
             font-size: 1rem;
-            color: $primary-color;
         }
 
         ul {
             display: flex;
             text-transform: uppercase;
             list-style: none;
+            letter-spacing: 1px;
 
             li {
                 margin-left: 1.5rem;
             }
 
             a {
-                color: $primary-color;
                 text-decoration: none;
                 font-size: 1rem;
                 transition: color 0.3s;
@@ -107,7 +129,6 @@
     transform: rotate(-90deg);
     transform-origin: left bottom;
     text-transform: uppercase;
-    z-index: 2;
 
     &::before {
         content: "";
@@ -116,22 +137,49 @@
         top: 50%;
         width: 7rem;
         height: 1px;
-        background-color: $primary-color;
+        background-color: $white;
         transform: translateY(-50%);
     }
 }
 
 .smoke-container {
     position: absolute;
-    height: 450px;
+    height: 380px;
     width: 200px;
-    bottom: 130px;
-    left: 23%;
+    top: 58%;
+    left: 30%;
+    transform: translate(-50%, -50%);
     -webkit-mask-image: linear-gradient(to top, rgba(0, 0, 0, 1) 30%, rgba(0, 0, 0, 0));
     -webkit-mask-size: 100% 100%;
     -webkit-mask-repeat: no-repeat;
     -webkit-mask-position: center bottom;
-    z-index: 1;
+}
+
+
+@media (min-width: 1920px) {
+    .smoke-container {
+        height: 700px;
+        width: 250px;
+        top: 72%;
+        left: 32%;
+    }
+}
+
+@media (max-width: 1300px) {
+    .smoke-container {
+        height: 700px;
+        width: 250px;
+        top: 70%;
+        left: 35%;
+    }
+
+    .stretched {
+        width: 70% !important;
+    }
+
+    .left-text {
+        margin-left: 2.5rem;
+    }
 }
 
 svg {
@@ -139,11 +187,10 @@ svg {
     top: 13%;
     height: 300px;
     width: 200px;
-    z-index: 1;
 
     path {
         fill: none;
-        stroke: $primary-color;
+        stroke: $white;
         opacity: 0.3;
         stroke-width: 3px;
         stroke-dasharray: 500 100;
@@ -168,12 +215,12 @@ svg {
     left: 0;
     width: 100%;
     pointer-events: none;
-    z-index: 2;
+    z-index: 1;
 }
 
 .reserve-btn-container {
     position: absolute;
-    bottom: 2rem;
+    bottom: 4rem;
     left: 50%;
     transform: translateX(-50%);
     z-index: 3;
@@ -181,7 +228,7 @@ svg {
 
 .reserve-btn {
     padding: 10px 24px;
-    background-color: $primary-color;
+    background-color: $white;
     color: #333;
     border: none;
     border-radius: 30px;
@@ -191,7 +238,7 @@ svg {
 
     &:hover {
         background-color: #333;
-        color: $primary-color;
+        color: $white;
     }
 }
 
