--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,5 +1,24 @@
 $font-family: "Poppins", sans-serif;
-$primary-color: #fff;
+$primary-color: #1593c9;
 $secondary-color: #d3d3d3;
 $background-image: url("../assets/hero_section_background.jpg");
 $gradient: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(12, 14, 22, 1) 100%);
+
+// colors
+$black: #000;
+$white: #fff;
+$gray: #808080;
+$light-gray: #f5f5f5;
+$dark-gray: #333;
+$red: #ff0000;
+$green: #00ff00;
+$blue: #0000ff;
+$yellow: #ffff00;
+$orange: #ffa500;
+$purple: #800080;
+$teal: #008080;
+$navy: #000080;
+$olive: #808000;
+$maroon: #800000;
+
+$blue-hover: rgb(0, 112, 204);
