--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -245,3 +245,54 @@ svg {
 .price {
     margin-top: 20px !important;
 }
+
+.circle {
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    box-shadow: 0px 0px 1px 1px #0000001a;
+}
+
+.blue {
+    background-color: #3652D9;
+    top: 33%;
+    left: 45.8%;
+    animation: pulse-animation-blue 2s infinite;
+}
+
+.red {
+    background-color: #D93636;
+    top: 53.5%;
+    left: 24%;
+    animation: pulse-animation-red 2s infinite;
+}
+
+@keyframes pulse-animation-blue {
+    0% {
+        box-shadow: 0 0 0 0px rgba(0, 0, 255, 0.5);
+    }
+
+    50% {
+        box-shadow: 0 0 10px 10px rgba(0, 0, 255, 0.6);
+    }
+
+    100% {
+        box-shadow: 0 0 0 20px rgba(0, 0, 255, 0);
+    }
+}
+
+@keyframes pulse-animation-red {
+    0% {
+        box-shadow: 0 0 0 0px rgba(255, 0, 0, 0.5);
+    }
+
+    50% {
+        box-shadow: 0 0 10px 10px rgba(255, 0, 0, 0.6);
+    }
+
+    100% {
+        box-shadow: 0 0 0 20px rgba(255, 0, 0, 0);
+    }
+}
