--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -10,9 +10,9 @@ $white: #fff;
 $gray: #808080;
 $light-gray: #f5f5f5;
 $dark-gray: #333;
-$red: #ff0000;
+$red: #D93636;
 $green: #00ff00;
-$blue: #0000ff;
+$blue: #3652D9;
 $yellow: #ffff00;
 $orange: #ffa500;
 $purple: #800080;
