--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,4 +1,5 @@
 @import './variables.scss';
+@import './mixins.scss';
 
 body {
     font-family: $font-family;
@@ -10,9 +11,7 @@ body {
     color: $white;
 }
 
-::-webkit-scrollbar {
-    width: 3px;
-}
+@include scroll-bar;
 
 ::-webkit-scrollbar-track {
     background: #f1f1f1;
@@ -47,8 +46,7 @@ body {
     }
 
     .centeredText {
-        display: flex;
-        flex-direction: column;
+        @include flex-column;
         justify-content: center;
         align-items: center;
         height: 100vh;
@@ -73,8 +71,7 @@ body {
     }
 
     header {
-        display: flex;
-        flex-direction: row;
+        @include flex-row;
         justify-content: space-between;
         align-items: center;
         padding: 60px;
@@ -119,6 +116,7 @@ body {
 }
 
 .left-text {
+    user-select: none;
     color: $secondary-color;
     font-size: 1rem;
     text-align: left;
@@ -134,6 +132,29 @@ body {
         content: "";
         position: absolute;
         left: -8rem;
+        top: 50%;
+        width: 7rem;
+        height: 1px;
+        background-color: $white;
+        transform: translateY(-50%);
+    }
+}
+
+.right-text {
+    user-select: none;
+    color: $secondary-color;
+    text-align: right;
+    margin-right: 5rem;
+    position: absolute;
+    right: 0;
+    transform: rotate(90deg);
+    transform-origin: right bottom;
+    text-transform: uppercase;
+
+    &::before {
+        content: "";
+        position: absolute;
+        right: -8rem;
         top: 50%;
         width: 7rem;
         height: 1px;
@@ -227,14 +248,7 @@ svg {
 }
 
 .reserve-btn {
-    padding: 10px 24px;
-    background-color: $white;
-    color: #333;
-    border: none;
-    border-radius: 30px;
-    font-size: 0.85rem;
-    cursor: pointer;
-    transition: background-color 0.3s ease, color 0.3s ease;
+    @include button-style($white, #333);
 
     &:hover {
         background-color: #333;
@@ -256,17 +270,37 @@ svg {
 }
 
 .blue {
-    background-color: #3652D9;
-    top: 33%;
-    left: 45.8%;
-    animation: pulse-animation-blue 2s infinite;
+    background-color: $blue;
+    top: 70%;
+    left: 23%;
+    animation: pulse-animation-blue 1.3s infinite;
+
+    &::before {
+        content: "START";
+        position: absolute;
+        top: 0px;
+        left: -180%;
+        transform: translateX(-50%);
+        color: $white;
+        font-size: 0.75rem;
+    }
 }
 
 .red {
-    background-color: #D93636;
-    top: 53.5%;
-    left: 24%;
-    animation: pulse-animation-red 2s infinite;
+    background-color: $red;
+    top: 30.5%;
+    left: 60%;
+    animation: pulse-animation-red 1.3s infinite;
+
+    &::before {
+        content: "END";
+        position: absolute;
+        top: 0px;
+        left: -180%;
+        transform: translateX(-50%);
+        color: $white;
+        font-size: 0.75rem;
+    }
 }
 
 @keyframes pulse-animation-blue {
@@ -295,4 +329,65 @@ svg {
     100% {
         box-shadow: 0 0 0 20px rgba(255, 0, 0, 0);
     }
+}
+
+#forest_silhouette {
+    background-image: url("../assets/forest_silhouette.jpeg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+}
+
+#forest_silhouette::before,
+#forest_silhouette::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 40%;
+    z-index: 1;
+    pointer-events: none;
+}
+
+#forest_silhouette::after {
+    bottom: 0;
+    background: linear-gradient(to top, black, transparent);
+}
+
+#bear {
+    background-image: url("../assets/bear.webp");
+}
+
+@keyframes pulseBoxShadow {
+    0% {
+        box-shadow: 0 10px 20px rgba(75, 75, 75, 0.5);
+    }
+
+    50% {
+        box-shadow: 0 20px 40px rgba(75, 75, 75, 0.7);
+    }
+
+    100% {
+        box-shadow: 0 10px 20px rgba(75, 75, 75, 0.5);
+    }
+}
+
+.animate-pulse-shadow {
+    animation: pulseBoxShadow 3s infinite;
+}
+
+#scroll_location {
+    h1::selection {
+        background-color: $blue;
+    }
+
+    p::selection {
+        background-color: $red;
+    }
+}
+
+.left_side_border {
+    border-left: 2px solid $primary-color;
+    padding-left: 1.5%;
 }
