--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -377,7 +377,7 @@ svg {
     animation: pulseBoxShadow 3s infinite;
 }
 
-#scroll_location {
+#explore_section {
     h1::selection {
         background-color: $blue;
     }
@@ -390,4 +390,40 @@ svg {
 .left_side_border {
     border-left: 2px solid $primary-color;
     padding-left: 1.5%;
+}
+
+#left_box {
+    background-image: url("../assets/man_in_nature.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+#analytics_section {
+    position: relative;
+    text-align: center;
+
+    .circle-overlay {
+        position: absolute;
+        top: 44%;
+        left: 62%;
+        transform: translateX(-50%);
+
+        width: 250px;
+        height: 250px;
+        stroke-width: 5px;
+    }
+}
+
+.position-container {
+    position: absolute;
+    top: 53%;
+    right: 18%;
+    transform: translateX(50%) translateY(-20%);
+    text-align: left;
+}
+
+.text-overlay {
+    background-color: rgba(0, 0, 0, 0.1);
+    padding: 10px;
 }
