Add scroll to top button

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -426,4 +426,24 @@ svg path {
 .text-overlay {
   background-color: rgba(0, 0, 0, 0.1);
   padding: 10px;
+}
+
+#scroll_to_top {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 3rem;
+  height: 3rem;
+  background-color: #1593c9;
+  color: #ffffff;
+  border-radius: 9999px;
+  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+  position: fixed;
+  bottom: 2.5rem;
+  right: 2.75rem;
+  z-index: 50;
+  transition: background-color 0.2s;
+}
+#scroll_to_top:hover {
+  background-color: #0d709b;
 }/*# sourceMappingURL=app.css.map */
