--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -427,3 +427,24 @@ svg {
     background-color: rgba(0, 0, 0, 0.1);
     padding: 10px;
 }
+
+#scroll_to_top {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 3rem;
+    height: 3rem;
+    background-color: $primary-color;
+    color: #ffffff;
+    border-radius: 9999px;
+    box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+    position: fixed;
+    bottom: 2.5rem;
+    right: 2.75rem;
+    z-index: 50;
+    transition: background-color 0.2s;
+
+    &:hover {
+        background-color: $primary-color-hover;
+    }
+}
