--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,5 +1,6 @@
 $font-family: "Poppins", sans-serif;
 $primary-color: #1593c9;
+$primary-color-hover: #0d709b;
 $secondary-color: #d3d3d3;
 $background-image: url("../assets/hero_section_background.jpg");
 $gradient: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(12, 14, 22, 1) 100%);
