Add increasing stats numbers effect

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -359,7 +359,38 @@ svg path {
 #bear {
   background-image: url("../assets/bear.webp");
 }
+#bear .eye {
+  position: absolute;
+  width: 10px;
+  height: 10px;
+  background-color: transparent;
+  border-radius: 50%;
+  box-shadow: 0 0 10px 2px #262626;
+  animation: pulse 3s infinite;
+}
+#bear .left-eye {
+  top: 35.7%;
+  left: 37%;
+}
+#bear .right-eye {
+  top: 35.7%;
+  left: 62.2%;
+}
 
+@keyframes pulse {
+  0% {
+    transform: scale(8);
+    box-shadow: 0 0 10px 2px #4a2b2b;
+  }
+  50% {
+    transform: scale(1.2);
+    box-shadow: 0 0 20px 4px #6b3d3d;
+  }
+  100% {
+    transform: scale(8);
+    box-shadow: 0 0 10px 2px #4a2b2b;
+  }
+}
 @keyframes pulseBoxShadow {
   0% {
     box-shadow: 0 10px 20px rgba(75, 75, 75, 0.5);
@@ -407,8 +438,8 @@ svg path {
 }
 #analytics_section .circle-overlay {
   position: absolute;
-  top: 44%;
-  left: 62%;
+  top: 43%;
+  left: 55%;
   transform: translateX(-50%);
   width: 250px;
   height: 250px;
@@ -446,4 +477,16 @@ svg path {
 }
 #scroll_to_top:hover {
   background-color: #0d709b;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+.animate-spin-slow {
+  animation: spin 40s linear infinite;
 }/*# sourceMappingURL=app.css.map */
