--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -438,19 +438,19 @@ svg {
 }
 
 #analytics_section {
-    position: relative;
-    text-align: center;
-
     .circle-overlay {
         position: absolute;
         top: 43%;
         left: 55%;
-        transform: translateX(-50%);
 
         width: 250px;
         height: 250px;
         stroke-width: 5px;
     }
+}
+
+#join_us_section {
+    overflow: hidden;
 }
 
 .position-container {
